--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,13 @@ SLACK_BOT_TOKEN=xoxb-your-token-here
 SLACK_CHANNEL=flight-tracker
 
 # -----------------
+# Google Gemini API (for AI-generated daily summaries)
+# -----------------
+# Get from: https://ai.google.dev/
+# Free tier: 15 requests per minute, 1500 per day
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# -----------------
 # Amadeus API (for flight data - needed later)
 # -----------------
 # Get from: https://developers.amadeus.com/
