WIP: Refactor to route-based flight tracking
Started refactoring from flight-number-based to route-based tracking.
See GitHub issues #48-#54 for remaining work.

- Remove FlightNumber from TrackedFlight entity
- Add DateFlexibilityDays and MaxStops fields
- Add GetRoutePriceAsync to IFlightPriceService
- Update PricePollingService for route-based searches
- Add stub implementation in AmadeusApiClient
- Update Amadeus API configuration with real keys

⚠️  Code does not compile - API handlers need updating (#48)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,11 +43,32 @@ services:
       WEBHOOK_URL: http://localhost:5678/
       # Generic timezone
       GENERIC_TIMEZONE: ${TIMEZONE:-America/New_York}
+      # App-specific environment variables
+      GEMINI_API_KEY: ${GEMINI_API_KEY}
+      GMAIL_ADDRESS: ${GMAIL_ADDRESS}
     depends_on:
       postgres:
         condition: service_healthy
     volumes:
       - n8n_data:/home/node/.n8n
+    networks:
+      - flight-tracker-network
+
+  # .NET API
+  api:
+    build:
+      context: ./src
+      dockerfile: FlightTracker.Api/Dockerfile
+    container_name: flight-tracker-api
+    ports:
+      - "5000:5000"
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_URLS: http://+:5000
+      ConnectionStrings__DefaultConnection: "Host=postgres;Database=flighttracker;Username=postgres;Password=${POSTGRES_PASSWORD}"
+    depends_on:
+      postgres:
+        condition: service_healthy
     networks:
       - flight-tracker-network
 
