--- a/src/FlightTracker.Api/appsettings.json
+++ b/src/FlightTracker.Api/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Host=localhost;Database=flighttracker;Username=postgres;Password=YOUR_PASSWORD_HERE"
   },
   "Amadeus": {
-    "ApiKey": "YOUR_AMADEUS_API_KEY",
-    "ApiSecret": "YOUR_AMADEUS_API_SECRET",
+    "ApiKey": "BPuUTfnh2eA3kJWolF8sxRm3QAPgKGns",
+    "ApiSecret": "ADqH7UTGTGXe3TLw",
     "BaseUrl": "https://api.amadeus.com"
   },
   "Logging": {
